--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,2 +1,2 @@
 <!-- menu-bar.component.html -->
-<button *ngIf="!isToggle" (click)="toggleSideNav()">≡</button>
+<button *ngIf="!isToggle" (click)="toggleSideNav()"><mat-icon class="larger-icon">menu</mat-icon></button>
