--- a/src/app/components/navbar/sidemenu/sidemenu.component.html
+++ b/src/app/components/navbar/sidemenu/sidemenu.component.html
@@ -4,7 +4,7 @@
     <button (click)="closeSideNav()" class="close-button">×</button>
     <!-- Navigation items with background on the left -->
     <div class="nav-items">
-      <a href="#">Home</a>
+      <a routerLink="">Home</a>
       <a routerLink="/table">Table</a>
       <!-- Add more navigation items as needed -->
     </div>
